Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27224

Leaking memory in QtConcurrent::ResultStore<T>::addResults

XMLWordPrintable

    • 731ba8ed08f80644b403556638c7f6229e678ebe

      Run tst_qfuture with valgrind to verify this:

      $ valgrind --tool=memcheck --leak-check=full ./tst_qfuture

      Attached is the output I've got.

      Context: Because of this Qt Creator might leak memory while searching (among other things). See QTCREATORBUG-7839.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            stromme Christian
            kosjar Nikolai Kosjar
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes